# utp-schedule-agent-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/: __init__.py  cli.py
apps/api/: __init__.py  main.py  schemas.py
apps/web/: next.config.ts  package-lock.json  package.json  tsconfig.json
apps/web/lib/: api.ts
docs/: architecture_decisions.md  facilitator_checklist.md  instructor_guide.md  presentation_structure.md  student_guide.md  student_todos.md  workshop_flow.md
docs/releases/: v1.0.0-workshop.md
docs/stages/: index.md  stage-00-core.md  stage-01-design.md  stage-02-tools.md  stage-03-orchestration.md  stage-04-memory.md  stage-05-validation.md  stage-06-monitoring.md  stage-07-security.md  stage-08-human-collaboration.md  stage-09-web.md
scenarios/utp_semester_planning/: spec.md
scripts/: __init__.py  run_attack_tests.py  run_eval.py  seed_data.py  stage_catalog.py  tasks.py
src/schedule_agent/: __init__.py
src/schedule_calculator/: __init__.py  errors.py  formatters.py
src/utp_schedule_agent_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
tests/core/: __init__.py  test_domain_rules.py  test_scheduler_service.py
tests/stage_01_design/: test_stage_docs.py
tests/stage_01_tools/: __init__.py  test_llm_provider.py  test_subject_resolution.py  test_tasks_runner.py  test_tools.py
tests/stage_02_orchestration/: __init__.py  test_agent_flow.py
tests/stage_03_memory/: __init__.py  test_memory.py
tests/stage_04_validation/: __init__.py  test_evaluator.py
tests/stage_05_monitoring/: __init__.py  test_monitoring.py
(+77 files in other folders)
