[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utp-schedule-agent-lab"
version = "0.1.0"
description = "Deterministic scheduling core for the UTP Schedule Agent Lab."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  ".",
]
testpaths = [
  "tests/core",
  "tests/stage_01_design",
  "tests/stage_01_tools",
  "tests/stage_02_orchestration",
]
